After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 595113 - Format-string problem causes compile failure
Format-string problem causes compile failure
Status: RESOLVED FIXED
Product: libgnomekbd
Classification: Core
Component: Capplet
2.26.x
Other Mac OS
: Normal normal
: ---
Assigned To: libgnomekbd maintainers
Sergey V. Udaltsov
Depends on:
Blocks:
 
 
Reported: 2009-09-14 00:00 UTC by Daniel Macks
Modified: 2009-09-14 19:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Use "%s" format for literal string (646 bytes, patch)
2009-09-14 00:00 UTC, Daniel Macks
none Details | Review

Description Daniel Macks 2009-09-14 00:00:17 UTC
Created attachment 143123 [details] [review]
Use "%s" format for literal string

OS X 10.6 gcc issues warnings when it detects an apparent format-string
vulnerability. libgnomekbd-2.26.0 is distributed with -Werror, so the warning
is a fatal build problem.

gkbd-indicator-plugins-capplet.c: In function 'CappletResponse':
gkbd-indicator-plugins-capplet.c:257: warning: format not a string
literal and no format arguments

This block of code looks the same in git trunk. Attached patch should fix it.
Comment 1 Sergey V. Udaltsov 2009-09-14 19:48:47 UTC
thank's fine. thanks, committed. Just a day before the code freeze:)