Fixing building on macos x

https://bugzilla.gnome.org/show_bug.cgi?id=595113